@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Add a per filter stub setting.
 
 2.30.8
 - Mayhem
